--- a/src/app/table-list/table-list.component.html
+++ b/src/app/table-list/table-list.component.html
@@ -78,18 +78,18 @@
                         style="border: none; background: none; color: black;">
                         <i data-toggle="tooltip" title="ดูรายละเอียด" data-placement="top"
                           class="fa fa-file-text-o ModalIcon " ></i>
-                      </button>&nbsp;
+                      </button>
 
 
-                      <button (click)="onRecord()" style="border: none; background: none; color: black;" >
+                      <button (click)="onRecord(item?.record._id)" style="border: none; background: none; color: black;" >
                         <i data-toggle="tooltip" title="การจดบันทึก" data-placement="top"
                           class="fa fa-pencil-square-o  Record" ></i>
-                      </button> &nbsp;
+                      </button>
 
                       <button style="border: none; background: none; color: black;">
                         <i class="fa fa-file-pdf-o PDF" (click)="printPDF()" ></i>
 
-                      </button>&nbsp;
+                      </button>
                     </td>
                   </tr>
                 </tbody>
