--- a/src/app/table-list/table-list.component.html
+++ b/src/app/table-list/table-list.component.html
@@ -71,9 +71,7 @@
                     </td>
 
                     <td class=" text-center " style=" width:1% ;white-space: nowrap;">
-                      <!-- <a href="" (click)="openModal()"><i class="fa fa-file-text-o" ></i></a>&nbsp; -->
-                      <!-- <a href=""  (click)="onRecord()" ><i class="fa fa-pencil-square-o" ></i></a>&nbsp;
-                      <a href=""><i class="fa fa-file-pdf-o" (click)="printPDF()" ></i></a> -->
+                 
                       <button (click)="openDetailModal(item._id)" 
                         style="border: none; background: none; color: black;">
                         <i data-toggle="tooltip" title="ดูรายละเอียด" data-placement="top"
@@ -81,7 +79,7 @@
                       </button>
 
 
-                      <button (click)="onRecord(item?.record._id)" style="border: none; background: none; color: black;" >
+                      <button (click)="onRecord(item._id)" style="border: none; background: none; color: black;" >
                         <i data-toggle="tooltip" title="การจดบันทึก" data-placement="top"
                           class="fa fa-pencil-square-o  Record" ></i>
                       </button>
@@ -506,7 +504,7 @@
                   </div>
                 </div>
                 <div class="modal-footer">
-                  <button type="submit" class="btn btn-success pull-center" (click)="recordCommit(selectedRecordId)">
+                  <button type="submit" class="btn btn-success pull-center" (click)="recordCommit()">
                     <i class="fa fa-check"></i>&nbsp; ยืนยัน
                   </button>
                   <button type="button" class="btn btn-danger pull-center" data-dismiss="modal" (click)="closeModal()">
