--- a/src/app/table-list/table-list.component.css
+++ b/src/app/table-list/table-list.component.css
@@ -12,9 +12,28 @@
   width: 180px;
 }
 .card-body{
-
-  font-family: 'TH SarabunPSK', sans-serif; /*ใช้ฟอนต์ราชการ*/
+  font-weight: 100;
+  border: none;
+  font-family: 'TH SarabunPSK', sans-serif; 
 }
+.card-body tbody{
+  font-size: 14px;
+}
+
+.searchLocation{
+  color: #ff9e2c;
+  background-color: #fff3e4;
+    border: 1px solid rgba(0, 0, 0, 0);
+    border-radius: 5px;
+    padding: 4px 8px;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1.333em;
+    display: inline-block;
+  font-family: 'TH SarabunPSK', sans-serif; 
+ 
+}
+
 .modal-body-detail{ 
   position: relative;
     display: flex;
@@ -36,7 +55,7 @@
   left: 50%;
   transform: translateX(-50%);
   justify-content: center;
-   font-family: 'TH SarabunPSK', sans-serif;
+  font-family: 'TH SarabunPSK', sans-serif;
   
 }
 .card-header{
@@ -377,6 +396,9 @@ label{
   .position-relative {
     position: relative;
   }
+  .form-group input{
+    border-radius: 5px;
+  }
   .border-error {
     position: absolute;
     top:15px;  /* ให้ข้อความอยู่ใต้ input */
@@ -443,28 +465,31 @@ label{
    
   color: red;
 }
- /*icon hover*/
- /* .MadalIcon{
-  position: relative;
- }
- .ModalIcon:hover{
-  position: relative;
-  background-color: rgb(255, 219, 61);
- } */
+
+
+:host ::ng-deep .close{
+  float: right;
+    font-size: 1.5rem;
+    font-weight: 500;
+    line-height: 1;
+    color: white ; /*#000000*/
+    text-shadow: 0 1px 0 #ffffff;
+    opacity: 1;
+}
   :host ::ng-deep .btn-add{
     color: #fff;
-    background-color: #000cb8e2;/*#000dc2ef*/
+    background-color: #0d6efd;/*#000dc2ef*/
     border-color: #00087c9f;
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 212, 0.42), 0 3px 1px -2px rgba(0, 0, 212, 0.42), 0 1px 5px 0 rgba(0, 0, 212, 0.42);
+    box-shadow: 0 2px 2px 0 #0d6efd, 0 3px 1px -2px #0d6efd, 0 1px 5px 0 #0d6efd;
 
   }
   :host ::ng-deep .btn-add:hover{
-    background-color: #000cb8e2; 
+    background-color: #0d6efd; 
     border-color: #00087c9f;
-    box-shadow: 0 14px 26px -12px rgba(0, 0, 212, 0.42), 0 4px 23px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 212, 0.42);
+    /* box-shadow: 0 14px 14px -12px #0d6dfd93, 0 4px 14px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px #0d6dfd93; */
   }
  
-
+ 
   :host ::ng-deep .dataTables_wrapper .dataTables_paginate .paginate_button {
     box-sizing: border-box;
     display: inline-block;
