--- a/src/app/table-list/table-list.component.html
+++ b/src/app/table-list/table-list.component.html
@@ -4,17 +4,20 @@
   3.style ของ tooltip ใช้ได้แค่ในตัวของ modal ถึงใช้ได้แต่ไม่สามารถมีการทำงานในแบบที่ต้องการได้ ตำแหน่งเริ่มต้นของ
 -->
 <div class="main-content">
-  <div class="row justify-content-end">
-    <div class="col-sm-2">
-      <div class="insert-data">
-        <button class="btn btn-add pull-center " (click)="onInsertModal()">
-          <i class="fa fa-plus"></i> &nbsp;เพิ่มรายการ
-        </button>
-      </div>
-    </div>
-  </div>
+  
 
   <div class="container-fluid">
+    <div class="row justify-content-end">
+      <div class="col-sm-2">
+        <div class="insert-data">
+          <button class="btn btn-add pull-center " (click)="onInsertModal()">
+            <i class="fa fa-plus"></i> &nbsp;เพิ่มรายการ
+          </button>
+        </div>
+      </div>
+    </div>
+
+
     <div class="row">
       <div class="col-md-12">
         <div class="card">
@@ -36,15 +39,15 @@
 
           <div class="card-body">
             <div class="table-responsive">
-              <table width="100%" datatable [dtOptions]="dtOptions"
-                class="table table-border table-hover table-bordered nowrap"  style="color: black;">
+              <table width="100%" datatable [dtOptions]="dtOptions" *ngIf="!loading"
+                class="table  table-border table-hover table-bordered nowrap"  style="color: black;">
                 <thead class="text-primary" style="color: black;">
                   <tr>
                     <th style="width: 2%; white-space: nowrap; text-align: center; color: black;">ครั้งที่</th>
                     <th  style="color: black;">หัวข้อการตรวจสอบ</th>
-                    <th  style="color: black;">วันที่เริ่มตรวจสอบ</th>
+                    <th  style="width: 10%; color: black;">วันที่เริ่มตรวจสอบ</th>
 
-                    <th style="color: black;">สถานที่</th>
+                    <th style="width: 5%; color: black;">สถานที่</th>
                     <th class="text-center"  style="color: black;"><i class="fa fa-gear"></i></th>
                   </tr>
                 </thead>
@@ -67,11 +70,15 @@
                     </td>
 
                     <td style=" white-space: nowrap;">
-                      {{item.record_location}}
+                      <!-- {{item.record_location}} -->
+                       <button class="searchLocation"(click)="searchLocation(item.record_location)">ดูพิกัด</button>
+                     
                     </td>
 
                     <td class=" text-center " style=" width:1% ;white-space: nowrap;">
-                 
+                      
+                      
+
                       <button (click)="openDetailModal(item._id)" 
                         style="border: none; background: none; color: black;">
                         <i data-toggle="tooltip" title="ดูรายละเอียด" data-placement="top"
@@ -96,44 +103,8 @@
             </div>
           </div>
 
-          <!-- การเพิ่มข้อมูล
-            <div class="modal fade" id="insertModel" tabindex="-1" role="dialog"
-                aria-labelledby="myModalLabel" aria-hidden="true">
-                <div class="modal-dialog modal-lg" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header"
-                            style="background: rgb(255,209,0);">
-                            <h5 class="modal-title"
-                                id="myModalLabel">เพิ่มรายการ</h5>
-                            <button type="button" class="close"
-                                data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div class="modal-body"
-                            [ngStyle]="{'width': '20px', 'height': '210mm'}">
-                          
-                            <form action method="post">
-                                <button
-                                            (click)="addPersonModel()"
-                                            style="border: 1px solid black; background: none;"><i
-                                                class="fa fa-plus"></i></button>
-                            </form>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button"
-                                class="btn btn-success pull-center"
-                                (click)="detailCommit()"><i
-                                    class="fa fa-check"></i>&nbsp;
-                                ยืนยัน</button>
-                            <button type="button" class="btn btn-danger"
-                                data-dismiss="modal"><i
-                                    class="fa fa-times"></i>&nbsp; ปิด</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        -->
+          <!-- การเพิ่มข้อมูล-->
+            
           <!--land insert-->
           <div class="modal fade" id="insertModel" tabindex="-1" role="dialog" aria-labelledby="addItemModalLabel"
             aria-hidden="true">
@@ -160,21 +131,21 @@
                         <div class="form-group">
                           <label for="id" class="form-label">ครั้งที่</label>
 
-                          <input type="id" id="id" formControlName="id" class="form-control" placeholder="ครั้งที่" />
+                          <input  type="id" id="id" formControlName="id" class="form-control" placeholder="ครั้งที่" />
                       
                         </div>
                       </div>
                       <div class="col-sm-4">
                         <div class="form-group">
                           <label for="startDate">วันที่เริ่มตรวจสอบ</label>
-                          <input style="color:rgb(171, 171, 171)" type="date" id="startDate" [(ngModel)]="startDate" formControlName="startDate"
-                            class="form-control" placeholder="วันที่เริ่มตรวจสอบ" />
+                          <input  type="date" id="startDate" [(ngModel)]="startDate" formControlName="startDate"
+                            class="form-control" placeholder="วันที่เริ่มตรวจสอบ" /> <!--style="color:rgb(171, 171, 171)"-->
                         </div>
                       </div>
                       <div class="col-sm-6">
                         <div class="form-group">
                           <label for="endDate">วันที่เสร็จสิ้น</label>
-                          <input style="color:rgb(171, 171, 171)" type="date" id="endDate" formControlName="endDate"
+                          <input  type="date" id="endDate" formControlName="endDate"
                             class="form-control" placeholder="วันที่เสร็จสิ้น" />
                         </div>
                       </div>
@@ -442,7 +413,7 @@
                 </div>
                 <div class="container">
                   <div class="row">
-                    <div class="col-sm-2" style="padding-top: 20px;">
+                    <div class="col-sm-6" style="padding-top: 20px;">
                       <div class="section">
                         &nbsp;
                         <button class="btn btn-just-icon" [ngClass]="{'active': activeButton === 'typro'}"
