--- a/src/app/table-list/table-list.component.html
+++ b/src/app/table-list/table-list.component.html
@@ -69,13 +69,13 @@
                       {{item.record_star_date | thaidate: "medium"}}
                     </td>
 
-                    <td style=" white-space: nowrap;">
+                    <td  class="text-center" style=" white-space: nowrap;">
                       <!-- {{item.record_location}} -->
                        <button class="searchLocation"(click)="searchLocation(item.record_location)">ดูพิกัด</button>
                      
                     </td>
 
-                    <td class=" text-center " style=" width:1% ;white-space: nowrap;">
+                    <td class="text-center" style=" width:1% ;white-space: nowrap;">
                       
                       
 
