--- a/src/app/table-list/table-list.component.css
+++ b/src/app/table-list/table-list.component.css
@@ -64,7 +64,7 @@ width: 180px;
     border: 1px solid #000;
     font-family: "Sarabun", sans-serif;
     max-height:297mm ;
-    overflow: auto;  
+    /* overflow: auto;   */
 }
 
 .modal-content{
