--- a/src/app/table-list/table-list.component.css
+++ b/src/app/table-list/table-list.component.css
@@ -32,7 +32,7 @@ position: relative;
 
 .modal-content{
 
-max-height: 1235.9px;
+/* max-height: 1235.9px; */
 left: 50%;
 transform: translateX(-50%);
 justify-content: center;
@@ -244,7 +244,7 @@ font-style: italic;
   background: #fff;
   padding: 96px;
   height: 100%;
-  max-height: 297mm;
+  /* max-height: 297mm; */
   
 }
 .header-topic{
