--- a/src/app/table-list/table-list.component.html
+++ b/src/app/table-list/table-list.component.html
@@ -85,7 +85,7 @@
                       </button>
 
                       <button style="border: none; background: none; color: black;">
-                        <i class="fa fa-file-pdf-o PDF" (click)="showPDF(item.id)" ></i>
+                        <i class="fa fa-file-pdf-o PDF" (click)="showPDF(item.record_filename)" ></i>
 
                       </button> 
                     </td>
