petch button commit

--- a/src/app/table-list/table-list.component.html
+++ b/src/app/table-list/table-list.component.html
@@ -412,9 +412,9 @@
 
                   <button type="button" class="btn btn-success pull-center" (click)="printPDF()">
                     <i class="fa fa-download"></i>&nbsp; ดาว์โหลด
-                  </button>
-                  <button type="button" class="btn btn-danger" (click)="saveRCPDF()">
-                    <i class="fa fa-times"></i>&nbsp; บันทึก
+                  </button>&nbsp;&nbsp;
+                  <button type="button" class="btn btn-add" (click)="saveRCPDF()">
+                    <i class="fa fa-save"></i>&nbsp; บันทึก
                   </button>
                 </div>
               </div>
